[package]
name = "badge-nft"
description = "Badge nft plus for hackwasm berlin 2023"
version = { workspace = true }
edition = { workspace = true }
authors =  { workspace = true }
license-file = { workspace = true }
keywords = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-storage-plus = { workspace = true }
cw-ownable = { workspace = true }
cw2 = {workspace = true }
thiserror = { workspace = true }
common      = { path = "../../packages/common" }
badges = { workspace = true } 
badge-nft = { workspace = true }
sg721-base = { workspace = true }
sg721 = { workspace = true }
sg-std = { workspace = true }
sg-metadata = { workspace = true }
cw721 = { workspace = true }
cw721-base = { workspace = true }

[dev-dependencies]
cw-multi-test = "0.16"